--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@ionic/angular": "^7.0.0",
     "firebase": "^10.10.0",
     "ionicons": "^7.0.0",
+    "ngx-extended-pdf-viewer": "^20.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
