--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@ionic/angular": "^7.0.0",
     "firebase": "^10.10.0",
     "ionicons": "^7.0.0",
+    "mongoose-paginate-v2": "^1.8.0",
     "ngx-extended-pdf-viewer": "^20.0.1",
     "ngx-pagination": "^6.0.3",
     "rxjs": "~7.8.0",
