--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "firebase": "^10.10.0",
     "ionicons": "^7.0.0",
     "ngx-extended-pdf-viewer": "^20.0.1",
+    "ngx-pagination": "^6.0.3",
     "pdfmake": "^0.2.10",
     "rxjs": "~7.8.0",
+    "save": "^2.9.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
   },
