--- a/package.json
+++ b/package.json
@@ -22,16 +22,18 @@
     "@angular/platform-browser": "^17.0.2",
     "@angular/platform-browser-dynamic": "^17.0.2",
     "@angular/router": "^17.0.2",
-    "@capacitor/android": "^5.7.2",
+    "@capacitor/android": "^5.7.5",
     "@capacitor/app": "5.0.7",
-    "@capacitor/core": "^5.7.2",
+    "@capacitor/core": "^5.7.5",
     "@capacitor/haptics": "5.0.7",
     "@capacitor/keyboard": "5.0.8",
     "@capacitor/status-bar": "5.0.7",
     "@ionic/angular": "^7.0.0",
+    "chart.js": "^4.4.0",
     "firebase": "^10.10.0",
     "ionicons": "^7.0.0",
     "mongoose-paginate-v2": "^1.8.0",
+    "ng2-charts": "^5.0.3",
     "ngx-extended-pdf-viewer": "^20.0.1",
     "ngx-pagination": "^6.0.3",
     "pdfmake": "^0.2.10",
@@ -49,7 +51,7 @@
     "@angular/cli": "^17.0.0",
     "@angular/compiler-cli": "^17.0.2",
     "@angular/language-service": "^17.0.2",
-    "@capacitor/cli": "^5.7.2",
+    "@capacitor/cli": "^5.7.5",
     "@ionic/angular-toolkit": "^9.0.0",
     "@types/jasmine": "~5.1.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
